# anbountool1

./: .gitignore  MANIFEST.in  Procfile  README.md  demo_input.csv  deployment_test_plan.md  heroku_deploy_guide.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  temp_test.py  templates_config.yaml  部署指南.md
.trae/: .ignore
.trae/rules/: project_rules.md
ab_doc_temps/: electricity_end.docx  electricity_start.docx
ab_response_formats/: Realty_end.docx  Realty_start.docx  electricity_start.docx  extract_info_from_online_article_json.py  guoziwei_end.docx  guoziwei_start.docx  new_enegry_end.docx  new_enegry_start.docx  science,technology_end.docx  science,technology_start.docx
docs/: universal_csv_to_word_说明文档.md
outputs/: 45c6d311-4946-411c-a5b1-02225afa52f1_1758086070_486632_guoziwei.docx  generated_20250917_131432.docx  generated_20250917_131432_backup.docx  universal_csv_to_word_audit_report.txt  部署测试报告.md  项目重构完成报告.md
src/csv_word_converter/: __init__.py  __main__.py  async_converter.py  batch_processor.py  cli.py  core.py  output_formats.py  web_server.py
src/csv_word_converter/utils/: __init__.py  doc_utils.py  image_downloader.py
tests/: __init__.py  conftest.py  test_async_converter.py  test_core.py  test_doc_utils.py
utils/: doc_utils.py
